--- a/references.bib
+++ b/references.bib
@@ -9,5 +9,10 @@
 @misc{aws_ec2, title={Amazon EC2:  Secure and resizable compute capacity for virtually any workload}, url={https://aws.amazon.com/ec2/},publisher={Amazon Web Services, Inc}} 
 @misc{aws_lambda, title={AWS Lambda:  Run code without thinking about servers or clusters}, url={https://aws.amazon.com/lambda/},publisher={Amazon Web Services, Inc}}
 @misc{aws_rekognition, title={Amazon Rekognition:  Automate your image and video analysis with machine learning}, url={https://aws.amazon.com/rekognition/},publisher={Amazon Web Services, Inc}} 
-@misc{stack_ex, title={Stack exchange}, url={https://stackexchange.com/}, journal={Hot Questions - Stack Exchange}} 
-@misc{stack_beer, url={https://data.stackexchange.com/beer/queries}, journal={Stack Exchange Data Explorer}} 
+@misc{stack_ex, title={Stack Exchange}, url={https://stackexchange.com/}, journal={Hot Questions - Stack Exchange}} 
+@misc{stack_beer, title={Stack Exchange - Beer, Wine and Spirits}, url={https://data.stackexchange.com/beer/queries}, journal={Stack Exchange Data Explorer}} 
+@misc{wikipedia_2020, title={TFIDF}, url={https://pl.wikipedia.org/wiki/TFIDF}, journal={Wikipedia}, publisher={Wikimedia Foundation}, year={2020}, month={10}} 
+@article{text_rank, title={TextRank: Bringing Order into Texts}, author={Mihalcea, Rada and Tarau, Paul}, url={https://web.eecs.umich.edu/~mihalcea/papers/mihalcea.emnlp04.pdf}}
+@misc{aws_cdk, title={AWS CDK:  Define your cloud application resources using familiar programming languages}, url={https://aws.amazon.com/cdk/},publisher={Amazon Web Services, Inc}} 
+@misc{aws_cf, title={AWS CloudFormation:  Speed up cloud provisioning with infrastructure as code}, url={https://aws.amazon.com/cloudformation/},publisher={Amazon Web Services, Inc}} 
+@misc{terraform, title={Automate Infrastructure on Any Cloud}, url={https://www.terraform.io/},publisher={HashiCorp Terraform}} 
